# ansilib

./: CHANGELOG.md  README.md  pyproject.toml  setup.py  test.ipynb  tests.py
AnsiLib/: AnsiLib.py  chars.py  color.py  utils.py
